# architecture-reference

./: .env.example  .gitignore  .pipeline-state  AGENTS.md  README.md  skills-lock.json
ConnectedAI/8_code/ai-backend/: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  pyproject.toml  start_service.py
ConnectedAI/8_code/ai-backend/core/agent/: base_agent.py  mock_agent.py
ConnectedAI/8_code/ai-backend/core/agents/: agent_graph.py
ConnectedAI/8_code/ai-backend/core/frontend/: app.py  astream_events_handler.py
ConnectedAI/8_code/ai-backend/core/preprocessing/: preprocess_order_data.py  prompts.py
ConnectedAI/8_code/ai-backend/core/server/: main_server.py
ConnectedAI/8_code/ai-backend/core/test_generation/: order_test_generation.py  test_generation_pipeline.py
ConnectedAI/8_code/ai-backend/core/utils/: chat_model.py
ConnectedAI/8_code/ai-backend/data/: order_data_report.html
ConnectedAI/8_code/ai-backend/data/eval_sets/: return-eligibility-test-set-with-answers-claude-sonnet.xlsx  return-eligibility-test-set-with-answers-claude-sonnet.xlsx.md  return-eligibility-test-set-with-answers-gemini.xlsx  return-eligibility-test-set-with-answers-gpt-4o-mini.xlsx
ConnectedAI/8_code/ai-backend/data/test_sets/: order-assistance-multiple-items-test-set.xlsx  order-history-test-set.xlsx.md  order-status-check-test-set.xlsx.md  return-eligibility-test-set.xlsx  shipping-delay-estimate-test-set.xlsx  shipping-delay-estimate-test-set.xlsx.md  tracking-and-shipping-information-test-set.xlsx  (+1 more)
ConnectedAI/8_code/ai-backend/example/: env.example
docs/: templates  (+1 more)
(+2510 files in other folders)
